# recipe-recommender-system

./: .gitignore  .pre-commit-config.yaml  README.md  _quarto.yml  app.py  pyproject.toml  requirements.txt
.github/workflows/: linter.yml  publish.yml
_freeze/eda/eda_ingredients_extraction/execute-results/: html.json
app/: app.py  config.py  configuration.py  constants.py
app/utils/: llm.py  scoring.py
data/: recipe_db_raw.parquet  test_cases_request_to_ingredients.json
eda/: eda_ingredients_extraction.ipynb  eda_recipe_recommendations.ipynb  scrap_recipes.py
utils/: scoring.py
