[project]
name = "recipe-recommender-system"
version = "0.1.0"
description = "Content based recipe recommender system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.8.0.post1",
    "numpy==1.23.3",
    "pandas==1.5.0",
    "plotly==5.10.0",
    "streamlit==1.22.0",
]
