[project]
name = "recipe-recommender-system"
version = "0.1.0"
description = "Content based recipe recommender system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "faiss-cpu>=1.8.0.post1",
    "numpy==1.23.3",
    "pandas==1.5.0",
    "plotly==5.10.0",
    "streamlit==1.22.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.5",
]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["eda/eda_recipe_recommendations.ipynb"]
src = ["app"]

[tool.ruff.lint]
preview = true
extend-select = [
    'E', 'F', 'W', 'C90', 'A', 'ANN', 'S', 'B', 'PT', 'Q', 'RSE', 'SIM', 'ARG', 'PTH', 'PD',
    'TRY', 'FLY', 'NPY', 'PLC', 'PLE', 'PLW', 'I',
    ]
