[project]
name = "recipe-recommender-system"
version = "0.1.0"
description = "Content based recipe recommender system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "faiss-cpu>=1.8.0.post1",
    "numpy==1.23.3",
    "openai>=1.61.1",
    "pandas==1.5.0",
    "plotly==5.10.0",
    "pydantic>=2.10.6",
    "streamlit==1.22.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.5",
]
eda = [
    "great-tables>=0.16.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "langchain-ollama>=0.2.3",
    "langgraph>=0.2.72",
    "nbformat>=5.10.4",
    "sentence-transformers>=3.4.1",
    "umap-learn>=0.5.7",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["app"]

[tool.ruff.lint]
preview = true
extend-select = [
    'E', 'F', 'W', 'C90', 'A', 'ANN', 'S', 'B', 'PT', 'Q', 'RSE', 'SIM', 'ARG', 'PTH', 'PD',
    'TRY', 'FLY', 'NPY', 'PLC', 'PLE', 'PLW', 'I',
    ]
